
EPSMSC:
- Removing IDEALX-related text.
- Adding Epeios text.

FLM:
- Using now the UNIX system calls under UNIX instead of the C/C++ call (which seems bugged).
- Using low-level io functions under Windows instead of the C/C++ call.
- Adding a static part for standardization.

FLW:
- Fixing bug which fills the cache even if there is asked for more then the cache can contain.

IDXBTR:
- Adding 'E_INDEX(_)'.

IDXBTQ:
- Adding 'E_IBTREEt()'.

IDXQUE:
- Fixing bugs concerning row type.

MDR:
- Adding some features for portable data types.

QUE:
- Fixing bug from typed queue.
- Fixing amount/size handling bug.

MMG:
- Fixing autonome declaration bug.
- Adaptation to changes in underlying libraries.
- Coding of operators '->' and '*' to replace operator '()'.

MMM:
- Adding 'E_MULTIMEMORY(_)' #define.

SSNMNG:
- Adapting to modification made in 'IDXBTQ' library.

STR:
- Adding missing 'const' qualifier.
- Addint 'ToLF()' method.

TOL:
- Fixing bug in the 'NAVt()' macro.

TXMTBL:
- Adding some helpful methods.

UYM:
- Fixing bug which have as result the loss of the memory pilote when calling 'reset()'.
- Fixing 'Fill()' compilation error.

--------
20011119
--------

CLNARG:
- Adding a 's' to the 'Get<Option|Command>Label' function name.
- Adding 'Separator' parameter to 'GetCommandLabels' method.
- Adding 'CLNARG_<DETAIL|GENERAL>_SEPARATOR' defines.
- Adding 'view' enum and modifying functions as needed.

ITG:
- moving it to the 'emth' subproject.

XMLxxx:
- Renamed to 'HOSxxx' and moved to their own project ('ehos').

XMLDBS:
- Adding missing return value.

TOL:
- Fixing cast problem.
- Removing incorrect comment which disturbs quickdoc generation.

TXF:
- Fixing long double printing bug.

--------
20010804
--------

GENERAL:
- moving backed-related libraries ('BKDEND', 'BKDxxx' & also 'FRTEND') to 'ebkd' sub-project.
- moving cgi-related libraries and software ('FRTEND', 'URLARG' and 'getbkdapi') to 'ecgi' sub-project.
- Using the g++ 3.0 due to an ICE by gcc 2.95.3